--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,17 @@
 @import '~bootstrap/scss/bootstrap';
+
+
+.nav-active {
+    border-bottom: 5px solid #0d6efd;
+}
+
+.no_outline {
+    outline: none;
+}
+
+.jumbotron{
+    height: 350px;
+    background-image: url(../img/jumbotron.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
