--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -20,8 +20,8 @@ footer {
     .footer_top {
         background-image: url(../img/footer-bg.jpg);
         background-repeat: no-repeat;
-            background-size: cover;
-        
+        background-size: cover;
+
 
         .logo_footer {
             background-image: url(../img/dc-logo-bg.png);
@@ -33,6 +33,12 @@ footer {
 
 }
 
-.marg_nega{
-    margin-top: -1rem;
+.banner_img {
+    position: relative;
+    height: 50px;
+
+    img {
+        position: absolute;
+        bottom: 30px;
+    }
 }
